# smartcardservices

./: CONTRIBUTING.md  Dev_Guide  Dev_Guide.md  README.md
CACNG/: CACNGRecord.cpp  CompressionTool.cpp  Info.plist  Padding.cpp
Dev/: Dev_Guide.txt
SmartCardServices/SmartCardServices.xcodeproj/: john.mode1v3  john.pbxuser  project.pbxproj
SmartCardServices/installPhase/man/: sc_auth.8
SmartCardServices/installPhase/scripts/: sc_auth
SmartCardServices/src/PCSC/: PCSCDevice.cpp  PCSCDevice.h  PCSCDriverBundle.cpp  PCSCDriverBundle.h  PCSCDriverBundles.h  atrhandler.c  atrhandler.h  config.h  configfile.c  configfile.l  debug.c  debug.h  error.c  (+43 more)
SmartCardServices/src/PKCS11dotNetV2/: Application.hpp  Array.cpp  Array.hpp  CardModuleService.hpp  Configuration.cpp  Configuration.hpp  Device.cpp  Device.hpp  DeviceMonitor.cpp  DeviceMonitor.hpp  DigestMD5.cpp  DigestSHA1.cpp  DigestSHA256.cpp  Except.h  IDeviceMonitorListener.hpp  Log.cpp  Log.hpp  Makefile.am  Marshaller.cpp  Marshaller.h  MarshallerCfg.h  MarshallerUtil.cpp  MarshallerUtil.h  MiniDriver.cpp  MiniDriver.hpp  MiniDriverAuthentication.cpp  MiniDriverAuthentication.hpp  MiniDriverCardCacheFile.cpp  MiniDriverCardCacheFile.hpp  MiniDriverContainer.cpp  MiniDriverContainer.hpp  MiniDriverContainerMapFile.cpp  MiniDriverContainerMapFile.hpp  MiniDriverException.hpp  MiniDriverFiles.cpp  MiniDriverFiles.hpp  MiniDriverPinPolicy.cpp  MiniDriverPinPolicy.hpp  Module.cpp  PCSC.cpp  (+115 more)
SmartCardServices/src/PKCS11dotNetV2/PKCS11Module2/: algo_des.cpp  algo_md5.h  algo_utils.cpp  application.cpp  attrcert.h  beroctet.cpp  beroctet.h  cardcache.cpp  cardcache.h  cardmoduleservice.cpp  cert_utils.h  certificateobject.cpp  certificateobject.h  critsect.cpp  dataobject.cpp  dataobject.h  des.cpp  des.h  digest.cpp  digest.h  error.cpp  error.h  keyobject.h  log.cpp  log.h  md5.h  mutex.cpp  pkcs11.cpp  pkcs11.h  pkcs11f.h  pkcs11t.h  platconfig.h  privatekeyobject.cpp  privatekeyobject.h  resource.h  rsaprivatekeyobject.cpp  rsaprivatekeyobject.h  rsapublickeyobject.h  sctoken.cpp  sctoken.h  (+17 more)
SmartCardServices/src/PKCS11dotNetV2/PKCS11Module2/rsa/: cr_digit.h  cr_global.h  cr_nn.h  cr_rsa.cpp  cr_rsa.h
SmartCardServices/src/PKCS11dotNetV2/PKCS11dotNetV2.xcodeproj/: project.pbxproj
SmartCardServices/src/PKCS11dotNetV2/cppMarshaller/: Array.cpp  Array.h  Marshaller.cpp  Marshaller.h  MarshallerCfg.h  PCSC.cpp
SmartcardCCID/: SmartcardCCID.plist  ccidBuildFix.patch
SmartcardCCID-1/: libusbBuildFix.patch
SmartcardCCID-35204/: Makefile  debugSymbolFix.patch
SmartcardCCID-35253/ccid/: Makefile  ccid.plist
SmartcardCCID-35253/libusb/: Makefile
SmartcardCCID/libusb/: Makefile  libusb.plist
Tokend/: APPLE_LICENSE
Tokend-36720/Tokend.xcodeproj/: geddis.mode1v3  geddis.pbxuser
Tokend-40596/PIV/: PIVDefines.h  PIVToken.cpp
Tokend/BELPIC/: BELPICAttributeCoder.cpp  BELPICAttributeCoder.h  BELPICError.cpp  BELPICError.h  BELPICKeyHandle.cpp  BELPICKeyHandle.h  BELPICRecord.cpp  BELPICRecord.h  BELPICSchema.cpp  BELPICSchema.h  BELPICToken.cpp  BELPICToken.h  Info.plist  belpic.cpp
Tokend/CAC/: CACAttributeCoder.cpp  CACAttributeCoder.h  CACError.cpp  CACError.h  CACKeyHandle.cpp  CACKeyHandle.h  CACRecord.cpp  CACRecord.h  CACSchema.cpp  CACSchema.h  CACToken.cpp  CACToken.h  Info.plist  cac.cpp
Tokend/CACNG/: CACNGAttributeCoder.cpp  CACNGAttributeCoder.h  CACNGError.cpp  CACNGError.h  CACNGKeyHandle.cpp  CACNGKeyHandle.h  CACNGRecord.cpp  CACNGRecord.h  CACNGSchema.cpp  CACNGSchema.h  CACNGToken.cpp  CACNGToken.h  CompressionTool.cpp  CompressionTool.h  Padding.cpp  Padding.h  TLV.cpp  TLV.inc  byte_string.h  cacng.cpp
Tokend/MuscleCard/: Info.plist  KeyRecord.cpp  KeyRecord.h  MuscleCardAttributeCoder.cpp  MuscleCardAttributeCoder.h  MuscleCardKeyHandle.cpp  MuscleCardKeyHandle.h  MuscleCardSchema.cpp  MuscleCardSchema.h  MuscleCardToken.cpp  MuscleCardToken.h  TokenRecord.cpp  TokenRecord.h  musclecard.cpp
Tokend/PIV/: Info.plist  PIVAttributeCoder.cpp  PIVAttributeCoder.h  PIVCCC.cpp  PIVCCC.h  PIVDefines.h  PIVError.cpp  PIVError.h  PIVKeyHandle.cpp  PIVKeyHandle.h  PIVRecord.cpp  PIVRecord.h  PIVSchema.cpp  PIVSchema.h  PIVToken.cpp  PIVToken.h  PIVUtilities.h  Padding.cpp  SecureBufferAllocator.h  SecureBufferAllocator.inc  TLV.h  byte_string.h  piv.cpp
Tokend/PKCS11/: Gemalto.cpp  GemaltoAttributeCoder.cpp  GemaltoAttributeCoder.h  GemaltoError.cpp  GemaltoError.h  GemaltoKeyHandle.cpp  GemaltoKeyHandle.h  GemaltoRecord.cpp  GemaltoRecord.h  GemaltoSchema.cpp  GemaltoSchema.h  GemaltoToken.cpp  GemaltoToken.h  Info.plist  cryptoki.h  gemalto_debug.sh  install.sh
Tokend/Tokend/: Adornment.cpp  Adornment.h  Attribute.cpp  Attribute.h  AttributeCoder.cpp  AttributeCoder.h  Cursor.cpp  Cursor.h  DbValue.cpp  DbValue.h  KeyHandle.cpp  KeyHandle.h  MetaAttribute.cpp  MetaAttribute.h  MetaRecord.cpp  MetaRecord.h  PKCS11Object.cpp  PKCS11Object.h  Record.cpp  Record.h  RecordHandle.cpp  RecordHandle.h  Relation.cpp  Relation.h  SCardError.cpp  SCardError.h  Schema.cpp  Schema.h  SelectionPredicate.cpp  SelectionPredicate.h  Token.cpp  Token.h  TokenContext.cpp  TokenContext.h
Tokend/Tokend.xcodeproj/: john.mode1v3  john.pbxuser  project.pbxproj
TokendPKCS11/: DesignNotes.txt  TokendPKCS11.exp  TokendPKCS11Target.xcconfig  TokendPKCS11_Prefix.pch
TokendPKCS11/TokendPKCS11.xcodeproj/: project.pbxproj
TokendPKCS11/include/: CFUtilities.h  HandleManager.h  IteratorUtilities.h  P11Attribute.h  P11CryptoState.h  P11Identity.h  P11Mutexes.h  P11Object.h  P11Session.h  P11Slot.h  P11Slots.h  P11State.h  Utilities.h  byte_string.h  config-objects.h  config.h  pkcs11.h
TokendPKCS11/src/: CFUtilities.cpp  HandleManager.inc  P11Attribute.cpp  P11CryptoState.cpp  P11Identity.cpp  P11Mutexes.cpp  P11Object.cpp  P11Session.cpp  P11Slot.cpp  P11Slots.cpp  P11State.cpp  TLV.cpp  Utilities.cpp  p11-global.cpp  p11-keyops.cpp  p11-object.cpp  p11-othercrypt.cpp  p11-personalization.cpp  p11-pubkey.cpp  p11-session.cpp  p11-slot.cpp  p11-unsupported.cpp
readers/: Makefile.am  Makefile.in  supported_readers.txt
(+79 files in other folders)
